# text-editor

./: .clang_complete  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TASKS.md  TESTME.md  facere.sh
src/: CMakeLists.txt  files.c  input.c  main.c  render.c  screen.c  util.c
src/include/: CMakeLists.txt  files.h  input.h  render.h  screen.h  util.h
src/include/lib/: gap_buffer.h
src/lib/: CMakeLists.txt  gap_buffer.c
tests/: CMakeLists.txt  logic_test.c  main_test.c
